Change log
==========

1.4 (unreleased)
----------------


1.3 (2010-07-30)
----------------
- Feature: Added a script and buildout option ``index-name`` to 
  specify the file name (without extension) for the index page.
  With this option you can safely build the index page into an 
  existing `Sphinx` documentation folder without overwriting 
  or changing the existing ``index.rst`` file and its HTML 
  equivalent. The default continues to be ``index.rst``, though.

- Feature removed: It is no longer possible to create a simple HTML
  index page without using `Sphinx` and a minimal `Sphinx` 
  configuration.


1.2 (2010-07-29)
----------------
- Feature: Add new script option ``-g``/``--grouping`` and zc.buildout 
  option ``grouping`` to group packages.

- Miscellaneous: Renamed the zc.buildout option `source` to `sources`
  since it contains one or more elements.

- Miscellaneous: Removed the version pinning on the Sphinx dependency 
  since our other dependency (repoze.sphinx.autointerface) is now 
  compatible with Sphinx 1.0.

- Bug: If pkg_resources.find_distributions cannot find valid
  Egg distributions we still force the tag folder itself into the 
  pkg_resources.working_set as a fallback.


1.1 (2010-07-25)
----------------
- Feature: The user can now provide a Sphinx configuration folder 
  path that will be used to generate additional content for the 
  documentation root folder.

- Factoring: Moved the DocsBuilder class into its own module.

- Factoring: Save run state on the documentation builder class 
  instead of handing it around

- Cosmetic: Use a flat hierarchy when creating the HTML output links
  instead of a folder per package. Only a single index page needs to 
  be created that way.


1.0 (2010-07-23)
----------------
- Initial release