@@ -3,6 +3,15 @@ Change log
 
 1.4 (unreleased)
 ----------------
+- Bug: Don't clean up intermediate files, otherwise it is not 
+  possible to re-use a template folder for creating several
+  separate pages into an output folder.
+
+- Bug: Clean up group header creation to avoid header level
+  mixups.
+
+- Bug: When creating a missing required index.rst, use a 
+  template file if it exists.
 
 
 1.3 (2010-07-30)
